2009-01-25	Mike Massonnet
Actions are saved/loaded to/from an XML file.

	- panel-plugin/actions.c(clipman_actions_load):
		Load actions from an XML file from the user config directory
		or fallback to a system wide config directory.  Drop the
		hard-coded actions.
	- panel-plugin/actions.c(clipman_actions_save):
		Save the actions in an XML format inside the user config
		directory.
	- panel-plugin/actions.c(clipman_actions_add):
		Create the regex with the flag "anchored" to force the regex'
		with a starting ^ and an ending $.
	- panel-plugin/Makefile.am:
		Declare SYSCONFDIF and add XML actions file.
	- panel-plugin/xfce4-clipman-actions.xml:
	 	Default system wide configuration file of the actions.

2009-01-25	Mike Massonnet
Actions are available but hard-coded at this time.

	- configure.ac.in, tests/*:
		Add a test program for the actions.
	- panel-plugin/actions.c, panel-plugin/actions.h,
	panel-plugin/Makefile.am:
		A new GObject ClipmanActions with methods to add and remove
		commands for a specific regex.  The code to save and load from
		an XML file still needs to be written.
	- panel-plugin/collector.c, panel-plugin/panel-plugin.c:
		Install new property "enable-actions" which will match the
		clipboard texts for actions.  Bind the property to xfconf
		inside panel_plugin_register().
	- panel-plugin/collector.c(cb_clipboard_owner_change):
		Change timeout from 500 to 250 milliseconds to make the
		actions respond faster on a mouse release.
	- panel-plugin/settings-dialog.glade:
		New dialogs for the actions.

2009-01-15	Mike Massonnet
Some minor changes.

	- panel-plugin/panel-plugin.c(panel_plugin_configure),
	panel-plugin/settings-dialog.glade:
		The menu is blocked while the dialog is shown.  Set the dialog
		transient for the panel plugin toplevel window and destroy with
		the parent (this introduces a bug: the panel button remains
		unclickable but dunno why).
	- panel-plugin/collector.c(cb_check_primary_clipboard):